@@ -5,9 +5,12 @@ package edu.colorado.phet.capacitorlab.view;
 import java.awt.geom.Point2D;
 
 import edu.colorado.phet.capacitorlab.CLConstants;
+import edu.colorado.phet.capacitorlab.model.BatteryCapacitorCircuit;
 import edu.colorado.phet.capacitorlab.model.Capacitor;
 import edu.colorado.phet.capacitorlab.model.ModelViewTransform;
 import edu.colorado.phet.capacitorlab.model.Capacitor.CapacitorChangeAdapter;
+import edu.colorado.phet.capacitorlab.view.PlateChargeNode.BottomPlateChargeNode;
+import edu.colorado.phet.capacitorlab.view.PlateChargeNode.TopPlateChargeNode;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
 import edu.colorado.phet.common.piccolophet.util.PNodeLayoutUtils;
 import edu.umd.cs.piccolo.PNode;
@@ -15,17 +18,18 @@ import edu.umd.cs.piccolo.PNode;
 
 public class CapacitorNode extends PhetPNode {
 
-    private final Capacitor capacitor;
+    private final BatteryCapacitorCircuit circuit;
     private final ModelViewTransform mvt;
     private final PNode parentNode;
     private final PlateNode topPlateNode, bottomPlateNode;
     private final DielectricNode dielectricNode;
     private final Point2D plateSizeDragPointOffset;
+    private final PlateChargeNode topPlateChargeNode, bottomPlateChargeNode;
     
-    public CapacitorNode( Capacitor capacitor, ModelViewTransform mvt ) {
+    public CapacitorNode( BatteryCapacitorCircuit circuit, ModelViewTransform mvt, boolean dev ) {
         
-        this.capacitor = capacitor;
-        this.capacitor.addCapacitorChangeListener( new CapacitorChangeAdapter() {
+        this.circuit = circuit;
+        this.circuit.getCapacitor().addCapacitorChangeListener( new CapacitorChangeAdapter() {
 
             @Override
             public void dielectricMaterialChanged() {
@@ -55,13 +59,17 @@ public class CapacitorNode extends PhetPNode {
         parentNode = new PNode();
         topPlateNode = new PlateNode();
         bottomPlateNode = new PlateNode();
-        dielectricNode = new DielectricNode( capacitor, mvt, CLConstants.DIELECTRIC_OFFSET_RANGE );
+        dielectricNode = new DielectricNode( circuit.getCapacitor(), mvt, CLConstants.DIELECTRIC_OFFSET_RANGE );
+        topPlateChargeNode = new TopPlateChargeNode( circuit, mvt, dev );
+        bottomPlateChargeNode = new BottomPlateChargeNode( circuit, mvt, dev );
         
         // rendering order
         addChild( parentNode );
         parentNode.addChild( bottomPlateNode );
+        parentNode.addChild( bottomPlateChargeNode );
         parentNode.addChild( dielectricNode ); // dielectric between the plates
         parentNode.addChild( topPlateNode );
+        parentNode.addChild( topPlateChargeNode );
         
         // default state
         updateGeometry();
@@ -71,6 +79,7 @@ public class CapacitorNode extends PhetPNode {
     private void updateGeometry() {
         
         // model-to-view transform
+        Capacitor capacitor = circuit.getCapacitor();
         double plateSize = mvt.modelToView( capacitor.getPlateSideLength() );
         double plateThickness = mvt.modelToView( capacitor.getPlateThickness() );
         double plateSeparation = mvt.modelToView( capacitor.getPlateSeparation() );
@@ -85,9 +94,11 @@ public class CapacitorNode extends PhetPNode {
         double x = 0;
         double y = 0;
         topPlateNode.setOffset( x, y );
+        topPlateChargeNode.setOffset( topPlateNode.getOffset() );
         x = topPlateNode.getXOffset();
         y = topPlateNode.getYOffset() + plateThickness + plateSeparation;
         bottomPlateNode.setOffset( x, y );
+        bottomPlateChargeNode.setOffset( bottomPlateNode.getOffset() );
         x = topPlateNode.getXOffset();
         y = topPlateNode.getYOffset() + plateThickness + dielectricGap;
         dielectricNode.setOffset( x, y );
@@ -109,6 +120,7 @@ public class CapacitorNode extends PhetPNode {
     private void updateDielectricOffset() {
         
         // model-to-view transform
+        Capacitor capacitor = circuit.getCapacitor();
         double dielectricOffset = mvt.modelToView( capacitor.getDielectricOffset() );
         double plateThickness = mvt.modelToView( capacitor.getPlateThickness() );
         double dielectricGap = mvt.modelToView( capacitor.getDielectricGap() );
@@ -120,6 +132,6 @@ public class CapacitorNode extends PhetPNode {
     }
     
     private void updateDielectricColor() {
-        dielectricNode.setColor( capacitor.getDielectricMaterial().getColor() );
+        dielectricNode.setColor( circuit.getCapacitor().getDielectricMaterial().getColor() );
     }
 }
